docs/api/qiskit/2.2/qiskit.circuit.library.PauliEvolutionGate.mdx
---
title: PauliEvolutionGate (v2.2)
description: API reference for qiskit.circuit.library.PauliEvolutionGate in qiskit v2.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PauliEvolutionGate
---

# PauliEvolutionGate

<Class id="qiskit.circuit.library.PauliEvolutionGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L31-L313" signature="qiskit.circuit.library.PauliEvolutionGate(operator, time=1.0, label=None, synthesis=None)" modifiers="class">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Time-evolution of an operator consisting of Paulis.

  For an Hermitian operator $H$ consisting of Pauli terms and (real) evolution time $t$ this gate represents the unitary

$$
U(t) = e^{-itH}.
$$

  The evolution gates are related to the Pauli rotation gates by a factor of 2. For example the time evolution of the Pauli $X$ operator is connected to the Pauli $X$ rotation $R_X$ by

$$
U(t) = e^{-itX} = R_X(2t).
$$

  Compilation:

  This gate represents the exact evolution $U(t)$. Implementing this operation exactly, however, generally requires an exponential number of gates. The compiler therefore typically implements an *approximation* of the unitary $U(t)$, e.g. using a product formula such as defined by [`LieTrotter`](qiskit.synthesis.LieTrotter "qiskit.synthesis.LieTrotter"). By passing the `synthesis` argument, you can specify which method the compiler should use, see [`qiskit.synthesis`](synthesis#module-qiskit.synthesis "qiskit.synthesis") for the available options.

  Note that the order in which the approximation and methods like [`control()`](#qiskit.circuit.library.PauliEvolutionGate.control "qiskit.circuit.library.PauliEvolutionGate.control") and [`power()`](#qiskit.circuit.library.PauliEvolutionGate.power "qiskit.circuit.library.PauliEvolutionGate.power") are called matters. Changing the order can lead to different unitaries.

  Examples:

  ```python
  from qiskit.circuit import QuantumCircuit
  from qiskit.circuit.library import PauliEvolutionGate
  from qiskit.quantum_info import SparsePauliOp

  X = SparsePauliOp("X")
  Z = SparsePauliOp("Z")
  I = SparsePauliOp("I")

  # build the evolution gate
  operator = (Z ^ Z) - 0.1 * (X ^ I)
  evo = PauliEvolutionGate(operator, time=0.2)

  # plug it into a circuit
  circuit = QuantumCircuit(2)
  circuit.append(evo, range(2))
  print(circuit.draw())
  ```

  The above will print (note that the `-0.1` coefficient is not printed!):

  ```text
       ┌──────────────────────────┐
  q_0: ┤0                         ├
       │  exp(-it (ZZ + XI))(0.2) │
  q_1: ┤1                         ├
       └──────────────────────────┘
  ```

  References:

  \[1] G. Li et al. Paulihedral: A Generalized Block-Wise Compiler Optimization Framework For Quantum Simulation Kernels (2021). [arXiv:2109.03371](https://arxiv.org/abs/2109.03371)

  **Parameters**

  *   **operator** ([*qiskit.quantum\_info.Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *|*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *|*[*SparseObservable*](qiskit.quantum_info.SparseObservable "qiskit.quantum_info.SparseObservable")  *|*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")*\[*[*qiskit.quantum\_info.Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *|*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *|*[*SparseObservable*](qiskit.quantum_info.SparseObservable "qiskit.quantum_info.SparseObservable")*]*) – The operator to evolve. Can also be provided as list of non-commuting operators where the elements are sums of commuting operators. For example: `[XY + YX, ZZ + ZI + IZ, YY]`.
  *   **time** (*ParameterValueType*) – The evolution time.
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)") *| None*) – A label for the gate to display in visualizations. Per default, the label is set to `exp(-it <operators>)` where `<operators>` is the sum of the Paulis. Note that the label does not include any coefficients of the Paulis. See the class docstring for an example.
  *   **synthesis** ([*EvolutionSynthesis*](qiskit.synthesis.EvolutionSynthesis "qiskit.synthesis.EvolutionSynthesis") *| None*) – A synthesis strategy. If None, the default synthesis is the Lie-Trotter product formula with a single repetition.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.PauliEvolutionGate.base_class "qiskit.circuit.library.PauliEvolutionGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.params">
    The parameters of this `Instruction`. Ideally these will be gate angles.
  </Attribute>

  ### time

  <Attribute id="qiskit.circuit.library.PauliEvolutionGate.time">
    Return the evolution time as stored in the gate parameters.

    **Returns**

    The evolution time.
  </Attribute>

  ## Methods

  ### add\_decomposition

  <Function id="qiskit.circuit.library.PauliEvolutionGate.add_decomposition" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L320-L325" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.PauliEvolutionGate.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/gate.py#L187-L244" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – List of quantum bit arguments.
    *   **cargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")) – List of classical bit arguments.

    **Returns**

    A tuple with single arguments.

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If the input is not valid. For example, the number of arguments does not match the gate expectation.

    **Return type**

    [*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.14)")\[[tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.14)")\[[list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)"), [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.14)")]]
  </Function>

  ### control

  <Function id="qiskit.circuit.library.PauliEvolutionGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L242-L302" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
    Return the controlled version of itself.

    The outcome is the specified controlled version of $e^{-itH}$. The returned gate represents $e^{-it H_C}$, where $H_C$ is the original operator $H$, tensored with $|0\rangle\langle 0|$ and $|1\rangle\langle 1|$ projectors (depending on the control state).

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – Number of controls to add to gate (default: `1`).
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)") *| None*) – Optional gate label. Ignored if implemented as an annotated operation.
    *   **ctrl\_state** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)") *| None*) – The control state in decimal or as a bitstring (e.g. `"111"`). If `None`, use `2**num_ctrl_qubits - 1`.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)") *| None*) – Not applicable to this class. Usually, when this is `True` we return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with a control modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, we can efficiently represent controlled Pauli evolutions as [`PauliEvolutionGate`](#qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate"), which is used here.

    **Returns**

    Controlled version of the given operation.

    **Return type**

    [Gate](qiskit.circuit.Gate "qiskit.circuit.Gate")
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.PauliEvolutionGate.copy" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L430-L445" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – name to be given to the copied circuit, if `None` then the name stays the same.

    **Returns**

    a copy of the current instruction, with the name updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.PauliEvolutionGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L216-L218" signature="inverse(annotated=False)">
    Return the inverse, which is obtained by flipping the sign of the evolution time.

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) –
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.PauliEvolutionGate.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L285-L290" signature="is_parameterized()">
    Return whether the `Instruction` contains [compile-time parameters](circuit#circuit-compile-time-parameters).
  </Function>

  ### power

  <Function id="qiskit.circuit.library.PauliEvolutionGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L221-L236" signature="power(exponent, annotated=False)">
    Raise this gate to the power of `exponent`.

    The outcome represents $e^{-i tp H}$ where $p$ equals `exponent`.

    **Parameters**

    *   **exponent** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")) – The power to raise the gate to.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – Not applicable to this class. Usually, when this is `True` we return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with a power modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, we can efficiently represent powers of Pauli evolutions as [`PauliEvolutionGate`](#qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate"), which is used here.

    **Returns**

    An operation implementing `gate^exponent`.

    **Return type**

    [*Gate*](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.PauliEvolutionGate.repeat" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L493-L523" signature="repeat(n)">
    Creates an instruction with `self` repeated :math\`n\` times.

    **Parameters**

    **n** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.PauliEvolutionGate.reverse_ops" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L347-L371" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.library.PauliEvolutionGate.soft_compare" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L216-L256" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.PauliEvolutionGate.to_matrix" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L176-L213" signature="to_matrix()">
    Return the matrix $e^{-it H}$ as `numpy.ndarray`.

    **Returns**

    The matrix this gate represents.

    **Raises**

    [**ValueError**](https://docs.python.org/3/library/exceptions.html#ValueError "(in Python v3.14)") – If the `time` parameters is not numeric.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)")
  </Function>

  ### to\_mutable

  <Function id="qiskit.circuit.library.PauliEvolutionGate.to_mutable" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/instruction.py#L145-L153" signature="to_mutable()">
    Return a mutable copy of this gate.

    This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.PauliEvolutionGate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/stable/2.2/qiskit/circuit/library/pauli_evolution.py#L308-L313" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression

    **Parameters**

    **parameter** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit._accelerate.circuit.ParameterExpression")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")) –

    **Return type**

    [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit._accelerate.circuit.ParameterExpression") | [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")
  </Function>
</Class>

